--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -449,10 +449,20 @@
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QCheckBox" name="recalcReadKnownMorphsFolderCheckBox">
+               <property name="text">
+                <string>Read files in 'known-morphs' folder and register morphs as known</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <property name="leftMargin">
+              <number>3</number>
+             </property>
              <property name="topMargin">
               <number>10</number>
              </property>
@@ -601,6 +611,13 @@
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QLabel" name="label_18">
+               <property name="text">
+                <string>Known Morphs Exporter</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
            <item>
@@ -631,6 +648,9 @@
              </item>
              <item>
               <widget class="QKeySequenceEdit" name="shortcutReadabilityReportGeneratorKeySequenceEdit"/>
+             </item>
+             <item>
+              <widget class="QKeySequenceEdit" name="shortcutKnownMorphsExporterKeySequenceEdit"/>
              </item>
             </layout>
            </item>
