changed generators to main windows (#173)

--- a/ankimorphs/ui/readability_report_generator.ui
+++ b/ankimorphs/ui/readability_report_generator.ui
@@ -1,270 +1,283 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ReadabilityReportGeneratorDialog</class>
- <widget class="QDialog" name="ReadabilityReportGeneratorDialog">
+ <class>ReadabilityReportGeneratorWindow</class>
+ <widget class="QMainWindow" name="ReadabilityReportGeneratorWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>673</width>
-    <height>568</height>
+    <width>680</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Readability Report Generator</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_5">
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout_4">
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QPushButton" name="inputPushButton">
-           <property name="text">
-            <string>Select Input</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>Morphemizer</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>File formats</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QLineEdit" name="inputDirLineEdit"/>
-         </item>
-         <item>
-          <widget class="QComboBox" name="comboBox"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout">
-           <item>
-            <widget class="QCheckBox" name="txtFilesCheckBox">
-             <property name="text">
-              <string>.txt</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QCheckBox" name="srtFilesCheckBox">
-             <property name="text">
-              <string>.srt</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QCheckBox" name="vttFilesCheckBox">
-             <property name="text">
-              <string>.vtt</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QCheckBox" name="mdFilesCheckBox">
-             <property name="text">
-              <string>.md</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <property name="topMargin">
-          <number>0</number>
-         </property>
-         <property name="bottomMargin">
-          <number>0</number>
-         </property>
-         <item alignment="Qt::AlignTop">
-          <widget class="QPushButton" name="generateReportPushButton">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>57</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Generate
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout_5">
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QPushButton" name="inputPushButton">
+            <property name="text">
+             <string>Select Input</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Morphemizer</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>File formats</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <widget class="QLineEdit" name="inputDirLineEdit"/>
+          </item>
+          <item>
+           <widget class="QComboBox" name="comboBox"/>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QCheckBox" name="txtFilesCheckBox">
+              <property name="text">
+               <string>.txt</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="srtFilesCheckBox">
+              <property name="text">
+               <string>.srt</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="vttFilesCheckBox">
+              <property name="text">
+               <string>.vtt</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="mdFilesCheckBox">
+              <property name="text">
+               <string>.md</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item alignment="Qt::AlignTop">
+           <widget class="QPushButton" name="generateReportPushButton">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>57</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Generate
 Report</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <property name="topMargin">
-        <number>10</number>
-       </property>
-       <property name="bottomMargin">
-        <number>10</number>
-       </property>
-       <item>
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Preprocess:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="squareBracketsCheckBox">
-         <property name="text">
-          <string>Ignore content in square brackets []</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="roundBracketsCheckBox">
-         <property name="text">
-          <string>ignore content in round brackets（）</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="slimRoundBracketsCheckBox">
-         <property name="text">
-          <string>ignore content in slim round brackets ()</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="namesMorphemizerCheckBox">
-         <property name="text">
-          <string>Ignore names found by morphemizer</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="namesFileCheckBox">
-         <property name="text">
-          <string>Ignore names found in names.txt</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="numbersCheckBox">
-         <property name="text">
-          <string>Ignore numbers</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="QTabWidget" name="tabWidget">
-       <property name="currentIndex">
-        <number>0</number>
-       </property>
-       <widget class="QWidget" name="tab">
-        <attribute name="title">
-         <string>Numerical</string>
-        </attribute>
-        <layout class="QVBoxLayout" name="verticalLayout_6">
-         <item>
-          <widget class="QTableWidget" name="numericalTableWidget">
-           <column>
-            <property name="text">
-             <string>File</string>
             </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Total Morphs</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Known</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Learning</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Unknown</string>
-            </property>
-           </column>
-          </widget>
-         </item>
-        </layout>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="topMargin">
+         <number>10</number>
+        </property>
+        <property name="bottomMargin">
+         <number>10</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Preprocess:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="squareBracketsCheckBox">
+          <property name="text">
+           <string>Ignore content in square brackets []</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="roundBracketsCheckBox">
+          <property name="text">
+           <string>ignore content in round brackets（）</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="slimRoundBracketsCheckBox">
+          <property name="text">
+           <string>ignore content in slim round brackets ()</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="namesMorphemizerCheckBox">
+          <property name="text">
+           <string>Ignore names found by morphemizer</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="namesFileCheckBox">
+          <property name="text">
+           <string>Ignore names found in names.txt</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="numbersCheckBox">
+          <property name="text">
+           <string>Ignore numbers</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QTabWidget" name="tabWidget">
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <widget class="QWidget" name="tab">
+         <attribute name="title">
+          <string>Numerical</string>
+         </attribute>
+         <layout class="QVBoxLayout" name="verticalLayout_6">
+          <item>
+           <widget class="QTableWidget" name="numericalTableWidget">
+            <column>
+             <property name="text">
+              <string>File</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total Morphs</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Known</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Learning</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Unknown</string>
+             </property>
+            </column>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="tab_2">
+         <attribute name="title">
+          <string>Percentage</string>
+         </attribute>
+         <layout class="QVBoxLayout" name="verticalLayout_7">
+          <item>
+           <widget class="QTableWidget" name="percentTableWidget">
+            <column>
+             <property name="text">
+              <string>File</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total Morphs</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Known</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Learning</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Unknown</string>
+             </property>
+            </column>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </widget>
-       <widget class="QWidget" name="tab_2">
-        <attribute name="title">
-         <string>Percentage</string>
-        </attribute>
-        <layout class="QVBoxLayout" name="verticalLayout_7">
-         <item>
-          <widget class="QTableWidget" name="percentTableWidget">
-           <column>
-            <property name="text">
-             <string>File</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Total Morphs</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Known</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Learning</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Unknown</string>
-            </property>
-           </column>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </widget>
-     </item>
-    </layout>
-   </item>
-  </layout>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>680</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
